Monitoring impl docs wip

--- a/docs/bib/mybib.bib
+++ b/docs/bib/mybib.bib
@@ -76,6 +76,30 @@
 	title        = {Chaos {M}esh {H}elm {C}hart (08/12/2021)},
 }
 
+@misc{PrometheusChart,
+	author       = {{Prometheus Monitoring Community}},
+	howpublished = {\url{https://github.com/prometheus-community/helm-charts/tree/main/charts/prometheus}},
+	title        = {Prometheus {H}elm {C}hart (08/12/2021)},
+}
+
+@misc{PrometheusAdapterChart,
+	author       = {{Prometheus Monitoring Community}},
+	howpublished = {\url{https://github.com/prometheus-community/helm-charts/tree/main/charts/prometheus-adapter}},
+	title        = {Prometheus {A}dapter {H}elm {C}hart (08/12/2021)},
+}
+
+@misc{BlackboxExporterChart,
+	author       = {{Prometheus Monitoring Community}},
+	howpublished = {\url{https://github.com/prometheus-community/helm-charts/tree/main/charts/prometheus-blackbox-exporter}},
+	title        = {Prometheus {B}lackbox {E}xporter {H}elm {C}hart (08/12/2021)},
+}
+
+@misc{GrafanaChart,
+	author       = {{Grafana Labs}},
+	howpublished = {\url{https://github.com/grafana/helm-charts/tree/main/charts/grafana}},
+	title        = {Grafana {H}elm {C}hart (08/12/2021)},
+}
+
 
 
 
