PromQL metrics wip

--- a/docs/content/background.tex
+++ b/docs/content/background.tex
@@ -164,6 +164,15 @@ for Chaos Mesh experiments?
 %----------------------------------------------------------------------------
 
 %----------------------------------------------------------------------------
+\subsubsection{PromQL} \label{background-promql}
+%----------------------------------------------------------------------------
+
+\begin{itemize}
+	\item Introduce PromQL
+	\item describe query functions that are later used to define dependability metrics
+\end{itemize}
+
+%----------------------------------------------------------------------------
 \subsubsection{Prometheus Blackbox Exporter}
 %----------------------------------------------------------------------------
 
